--- a/Comecocos/nbproject/private/private.properties
+++ b/Comecocos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Raquel\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\raque\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
